--- a/index.html
+++ b/index.html
@@ -261,5 +261,6 @@
 
   <!-- Main application script -->
   <script src="app.js"></script>
+  <script src="export-patch.js"></script>
 </body>
 </html>
